# knowledge_base_chunker_webui

./: .gitignore  README.md  docker-compose.yml  k8s-deployment.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: process.py
backend/app/core/: embedding_client.py  llm_client.py  prompts.py
backend/app/schemas/: process.py
backend/app/services/: chunking_service.py  file_processing_service.py  orchestrator.py  processing_service.py
backend/tests/: test_app.py  test_processing.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  i18n.ts  types.ts
frontend/src/components/: ConfigurationPanel.tsx  InputSection.tsx  OutputSection.tsx
frontend/src/locales/: en.json  zh.json
