[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
